--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-modernist
+title: Utku Er's GitHub Web Interface
+description: Feel free to check here once in a while, bookmark it or even buy me a gift from my amazon wish list! :-P
